--- a/Anime-Lofi.html
+++ b/Anime-Lofi.html
@@ -15,8 +15,7 @@
     <nav>
       <ul>
         <li class="Logo"><a href="/index.html">NAME</a></li>
-        <li><a href="/Anime-Lofi.html">Anime-Lofi</a></li>
-        <li><a href="/Just-Lofi.html">Just-Lofi</a></li>
+        <li><a href="/ChillMusic/Anime-Lofi.html">Anime-Lofi</a></li>
       </ul>
     </nav>
     <!-- <img src="/bgs/tatiana-rodriguez-5bXUxtRXi8w-unsplash.jpg" alt="" id="bgimg"> -->
