--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <nav>
         <ul>
-            <li class="Logo">NAME</li>
+            <li class="Logo">V I B H A</li>
             <li><a href="/ChillMusic/Anime-Lofi.html">Anime-Lofi</a></li>
             <li>Coming Soon..</li>
         </ul>
