updated title and Logo name

--- a/Anime-Lofi.html
+++ b/Anime-Lofi.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NAME - AnimeLofi</title>
+    <title>V I B H A - AnimeLofi</title>
     <script
       src="https://kit.fontawesome.com/04bd8a6436.js"
       crossorigin="anonymous"
@@ -14,7 +14,7 @@
   <body>
     <nav>
       <ul>
-        <li class="Logo"><a href="/index.html">NAME</a></li>
+        <li class="Logo"><a href="/ChillMusic/index.html">NAME</a></li>
         <li><a href="/ChillMusic/Anime-Lofi.html">Anime-Lofi</a></li>
       </ul>
     </nav>
