--- a/Anime-Lofi.html
+++ b/Anime-Lofi.html
@@ -14,7 +14,7 @@
   <body>
     <nav>
       <ul>
-        <li class="Logo"><a href="/ChillMusic/index.html">NAME</a></li>
+        <li class="Logo"><a href="/ChillMusic/index.html">V I B H A</a></li>
         <li><a href="/ChillMusic/Anime-Lofi.html">Anime-Lofi</a></li>
       </ul>
     </nav>
