Changed ChillMusic to VIBHA

--- a/Anime-Lofi.html
+++ b/Anime-Lofi.html
@@ -14,8 +14,8 @@
   <body>
     <nav>
       <ul>
-        <li class="Logo"><a href="/ChillMusic/index.html">V I B H A</a></li>
-        <li><a href="/ChillMusic/Anime-Lofi.html">Anime-Lofi</a></li>
+        <li class="Logo"><a href="/VIBHA/index.html">V I B H A</a></li>
+        <li><a href="/VIBHA/Anime-Lofi.html">Anime-Lofi</a></li>
       </ul>
     </nav>
     <!-- <img src="/bgs/tatiana-rodriguez-5bXUxtRXi8w-unsplash.jpg" alt="" id="bgimg"> -->
