Changed name to VIBHA

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav>
         <ul>
             <li class="Logo">V I B H A</li>
-            <li><a href="/ChillMusic/Anime-Lofi.html">Anime-Lofi</a></li>
+            <li><a href="/VIBHA/Anime-Lofi.html">Anime-Lofi</a></li>
             <li>Coming Soon..</li>
         </ul>
     </nav>
